# liblogpp

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  doxyfile  log.hpp
include/: ConsoleLogger.hpp  Extensions.hpp  FileLogger.hpp  ILogger.hpp  LogExtensions.hpp  LogLevel.hpp  TextColour.hpp  log.hpp
include/memory_allocation/: LeakDetection.hpp
src/: ConsoleLogger.cpp  FileLogger.cpp  ILogger.cpp  LogLevel.cpp
src/memory_allocation/: LeakDetection.cpp
test/: CMakeLists.txt  Makefile
test/src/: TestMain.cpp
toolchains/: arm64-toolchain.cmake  armhf-toolchain.cmake  ppc-toolchain.cmake
